# geometry-to-spatialite

./: .buildinfo  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  release.sh  run_tests.py  search.html  searchindex.js  troubleshooting.html  usage.html
.github/workflows/: build_docs.yml  deploy_docs.yml  publish.yml  test.yml
_sources/: installation.md.txt  troubleshooting.md.txt  usage.md.txt
docs/source/: conf.py  index.md  installation.md  usage.md
geometry_to_spatialite/: __init__.py  geojson.py  shapefile.py  utils.py
tests/: test_geojson_cli.py  test_geojson_lib.py  test_shapfile_cli.py  test_shapfile_lib.py  test_utils.py
tests/fixtures/geojson/: feature.geojson  longcoords.geojson  valid.geojson
tests/fixtures/shp/: mixed_geometry.dbf  mixed_geometry.qmd  mixed_geometry.shp  mixed_geometry.shx  points.dbf  points.shp  points.shx  polygons.dbf  polygons.shp  polygons.shx
