[tool.poetry]
name = "geometry-to-spatialite"
version = "0.4.0"
description = "Import geographic and spatial data from files into a SpatiaLite DB"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/geometry-to-spatialite"
homepage = "https://github.com/chris48s/geometry-to-spatialite"
documentation = "https://chris48s.github.io/geometry-to-spatialite"

[tool.poetry.dependencies]
python = "^3.8"
sqlite-utils = ">=2.1,<4.0"
Shapely = ">=1.6.4,<3.0.0"
pyshp = "^2.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.11"
flake8 = "^5.0.4"
black = "==22.12.0"
coverage = "^7.0"
sphinx = "^4.3.2"
sphinx_rtd_theme = "^1.1.1"
myst-parser = "^0.18.1"
ghp-import = "^2.1.0"

[tool.poetry.scripts]
geojson-to-spatialite = 'geometry_to_spatialite.geojson:main'
shapefile-to-spatialite = 'geometry_to_spatialite.shapefile:main'
[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
