[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "geometry-to-spatialite"
authors = [{name = "chris48s"}]
description = "Import geographic and spatial data from files into a SpatiaLite DB"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "sqlite-utils>=2.1,<4.0",
    "Shapely>=1.6.4,<3.0.0",
    "pyshp>=2.1.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "flit==3.11.0",
    "isort==5.13.2",
    "flake8==7.1.2",
    "black==24.8.0",
    "coverage==7.6.1"
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==4.0.1",
    "ghp-import==2.1.0"
]

[project.urls]
Home = "https://github.com/chris48s/geometry-to-spatialite"
Source = "https://github.com/chris48s/geometry-to-spatialite"
Documentation = "https://chris48s.github.io/geometry-to-spatialite"

[tool.flit.module]
name = "geometry_to_spatialite"

[project.scripts]
geojson-to-spatialite = 'geometry_to_spatialite.geojson:main'
shapefile-to-spatialite = 'geometry_to_spatialite.shapefile:main'
